--- a/roles/keystoneserver/tasks/main.yml
+++ b/roles/keystoneserver/tasks/main.yml
@@ -1,22 +1,27 @@
-- name: ensure python-sqlalchemy < 0.10 is installed
-  apt: name=python-sqlalchemy default_release=jessie
-
-- name: ensure python-cryptography (>=1.0) is installed (backport BUG)
-  apt: name=python-cryptography default_release=testing state=latest
-  
 - name: ensure keystone packages are installed
-  apt: name={{ item }} default_release=jessie-backports
+  apt: name={{ item }}
   with_items:
     - keystone
     - python-keystone
     - python-keystoneclient
     - python-oslo.db
-  notify: start keystone
+
+- name: ensure keystone service is disabled
+  command: echo "manual" > /etc/init/keystone.override
+
+- name: ensure keystone service is stopped
+  service: name=keystone state=stopped
   
 - name: ensure sqlite keystone database is deleted
   file: dest=/var/lib/keystone/keystone.db state=absent
 
-- name: ensure keystone config script is present
+- name: ensure apache2 and apache wsgi module are installed
+  apt: name={{ item }}
+  with_items:
+    - apache2
+    - libapache2-mod-wsgi
+  
+- name: ensure keystone config file is present
   template: >
     src=etc/keystone/keystone.conf
     dest=/etc/keystone/keystone.conf
@@ -27,4 +32,7 @@
 - name: DB sync for keystone
   shell: >
     /usr/bin/keystone-manage db_sync
-  notify: restart keystone
+
+- name: Fernet keys initialization
+  shell: >
+    /usr/bin/keystone-manage fernet_setup --keystone-user keystone --keystone-group keystone
