Configure the Apache HTTP server for keystone server

--- a/roles/keystoneserver/tasks/main.yml
+++ b/roles/keystoneserver/tasks/main.yml
@@ -32,7 +32,32 @@
 - name: DB sync for keystone
   shell: >
     /usr/bin/keystone-manage db_sync
+  notify: restart keystone
 
 - name: Fernet keys initialization
   shell: >
     /usr/bin/keystone-manage fernet_setup --keystone-user keystone --keystone-group keystone
+
+- name: ensure apache2 config is present
+  template: >
+    src=etc/apache2/apache2.conf
+    dest=/etc/apache2/apache2.conf
+    owner=root
+    group=root
+    mode=0600
+
+- name: ensure virtual host wsgi config is present
+  template: >
+    src=etc/apache2/sites-available/wsgi-keystone.conf
+    dest=/etc/apache2/sites-available/wsgi-keystone.conf
+    owner=root
+    group=root
+    mode=0600
+
+- name: ensure virtual host wsgi is enabled
+  shell: >
+    /usr/sbin/a2ensite wsgi-keystone.conf
+  notify: restart apache2
+
+- name: ensure sqlite keystone database is deleted
+  file: dest=/var/lib/keystone/keystone.db state=absent
