--- a/roles/keystoneserver/handlers/main.yml
+++ b/roles/keystoneserver/handlers/main.yml
@@ -4,3 +4,10 @@
 - name: start keystone
   service: name=keystone state=started
 
+
+- name: restart apache2
+  service: name=apache2 state=restarted
+
+- name: start apache2
+  service: name=apache2 state=started
+
