--- a/site.yml
+++ b/site.yml
@@ -20,13 +20,17 @@
 #   roles:
 #     - role: openstackclient
 
-- hosts: controller-nodes
-  roles:
-    - role: keystoneserver
-      
+# - hosts: all
+#   roles:
+#     - role: python-shade
+
 # - hosts: controller-nodes
 #   roles:
-#     - role: keystone_population
+#     - role: keystoneserver
+      
+- hosts: controller-nodes
+  roles:
+    - role: keystone_population
       
 # - hosts: storage-nodes
 #   roles: 
