Updating nova.conf with [keystone_authtoken] section properly modified

--- a/roles/novaserver/templates/etc/nova/nova.conf
+++ b/roles/novaserver/templates/etc/nova/nova.conf
@@ -358,7 +358,7 @@ enabled_apis = osapi_compute
 # administrative credentials only if 'admin' is specified as the username.
 #  (string value)
 # Allowed values: keystone, noauth2
-#auth_strategy = keystone
+auth_strategy = keystone
 
 # Treat X-Forwarded-For as the canonical remote address. Only enable this if you have a sanitizing proxy. (boolean value)
 #use_forwarded_for = false
@@ -3193,9 +3193,10 @@ api_servers = http://{{ controller_ip }}:9292
 
 auth_uri = http://{{ controller_ip }}:5000
 auth_url = http://{{ controller_ip }}:35357
-auth_plugin = password
-project_domain_id = default
-user_domain_id = default
+memcached_servers = {{ controller_ip }}:11211
+auth_type = password
+project_domain_name = default
+user_domain_name = default
 project_name = service
 username = nova
 password = {{ nova_identity_password }}
