running agents on controller (not working yet)

--- a/roles/neutronserver/handlers/main.yml
+++ b/roles/neutronserver/handlers/main.yml
@@ -9,7 +9,7 @@
   with_items:
     - neutron-l3-agent
     - neutron-dhcp-agent
-    - neutron-lbaas-agent
+#    - neutron-lbaas-agent
     - neutron-metadata-agent
     
 - name: restart openvswitch services
