--- a/roles/neutronserver/templates/etc/neutron/neutron.conf
+++ b/roles/neutronserver/templates/etc/neutron/neutron.conf
@@ -700,7 +700,7 @@ password = {{ neutron_identity_password }}
 #insecure = false
 
 # The region in which the identity server can be found. (string value)
-region_name = regionOne
+#region_name = regionOne
 
 # Directory used to cache files related to PKI tokens. (string value)
 #signing_dir = <None>
