Return to a classic openvswitch deployment using network node

--- a/roles/neutronserver/templates/etc/neutron/neutron.conf
+++ b/roles/neutronserver/templates/etc/neutron/neutron.conf
@@ -769,14 +769,14 @@ password = {{ neutron_identity_password }}
 #auth_admin_prefix =
 
 # Host providing the admin Identity API endpoint. Deprecated, use identity_uri. (string value)
-auth_host = 127.0.0.1
+#auth_host = 127.0.0.1
 
 # Port of the admin Identity API endpoint. Deprecated, use identity_uri. (integer value)
 #auth_port = 35357
 
 # Protocol of the admin Identity API endpoint. Deprecated, use identity_uri. (string value)
 # Allowed values: http, https
-auth_protocol = http
+#auth_protocol = http
 
 # Complete admin Identity API endpoint. This should specify the unversioned root endpoint e.g. https://localhost:35357/ (string value)
 #identity_uri = <None>
@@ -787,13 +787,13 @@ auth_protocol = http
 #admin_token = <None>
 
 # Service username. (string value)
-admin_user = admin
+#admin_user = admin
 
 # Service user password. (string value)
-admin_password = 
+#admin_password = 
 
 # Service tenant name. (string value)
-admin_tenant_name = admin
+#admin_tenant_name = admin
 
 # Authentication type to load (unknown value)
 # Deprecated group/name - [DEFAULT]/auth_plugin
