--- a/roles/neutronserver/templates/etc/neutron/plugins/ml2/ml2_conf.ini
+++ b/roles/neutronserver/templates/etc/neutron/plugins/ml2/ml2_conf.ini
@@ -123,7 +123,7 @@ extension_drivers = port_security
 
 # List of physical_network names with which flat networks can be created. Use default '*' to allow flat networks with arbitrary
 # physical_network names. Use an empty list to disable flat networks. (list value)
-flat_networks = provider
+flat_networks = external
 
 
 [ml2_type_geneve]
@@ -186,7 +186,7 @@ vni_ranges = 65537:69999
 #
 
 # Driver for security groups firewall in the L2 agent (string value)
-#firewall_driver = <None>
+firewall_driver = iptables_hybrid
 
 # Controls whether the neutron security group API is enabled in the server. It should be false when using no security groups or using the
 # nova security group API. (boolean value)
