--- a/roles/neutron-agents/handlers/main.yml
+++ b/roles/neutron-agents/handlers/main.yml
@@ -1,15 +1,10 @@
-- name: restart neutron-server
-  service: name=neutron-server state=restarted
-
-- name: restart ovs agent
-  service: name=neutron-openvswitch-agent state=restarted
-  
 - name: restart neutron agents
   service: name={{ item }} state=restarted
   with_items:
     - neutron-l3-agent
     - neutron-dhcp-agent
     - neutron-metadata-agent
+    - neutron-openvswitch-agent
     
 - name: restart openvswitch services
   service: name=openvswitch-switch state=restarted
