--- a/roles/neutron-agents/tasks/main.yml
+++ b/roles/neutron-agents/tasks/main.yml
@@ -11,17 +11,11 @@
   apt: name={{ item }} default_release=jessie-backports
   with_items:
     - neutron-common
-    - neutron-plugin-openvswitch-agent
+    - neutron-openvswitch-agent
     - neutron-metadata-agent
     - neutron-l3-agent
     - neutron-dhcp-agent
   
-- name: obtain service tenant id
-  shell: >-
-    keystone --os-endpoint http://{{ controller_ip }}:35357/v2.0 --os-token \
-    {{ admin_token }} tenant-get service|grep id|awk '{print $4}' 
-  register: nova_admin_tenant_id
-          
 - name: ensure neutron.conf is configured
   template: >
     src=../../neutronserver/templates/etc/neutron/neutron.conf
@@ -68,10 +62,5 @@
   notify:
     - restart neutron agents
 
-- name: ensure ml2 plugin is configured
-  template: >
-    src=etc/neutron/plugins/ml2/ml2_conf.ini
-    dest=/etc/neutron/plugins/ml2/ml2_conf.ini
-    owner=root group=root mode=0644
-  notify:
-    - restart neutron agents
+- name: ensure openvswitch-switch is restarted
+  service: name=openvswitch-switch state=restarted
