--- a/roles/novaserver/templates/etc/nova/nova.conf
+++ b/roles/novaserver/templates/etc/nova/nova.conf
@@ -2727,7 +2727,7 @@ connection = mysql+pymysql://nova:{{ nova_db_password }}@{{ controller_ip }}/nov
 #endpoint_template = <None>
 
 # Region name of this node (string value)
-#os_region_name = <None>
+os_region_name = {{ region }}
 
 # Number of cinderclient retries on failed http calls (integer value)
 #http_retries = 3
