Removing references to default_release=jessie-backports

--- a/roles/cinderserver/tasks/main.yml
+++ b/roles/cinderserver/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: ensure cinder packages are installed
-  apt: name={{ item }} default_release=jessie-backports
+  apt: name={{ item }} 
   with_items:
     - cinder-api 
     - cinder-scheduler
