--- a/roles/neutron-agents-compute/tasks/main.yml
+++ b/roles/neutron-agents-compute/tasks/main.yml
@@ -17,7 +17,7 @@
 #   sysctl: name=net.bridge.bridge-nf-call-ip6tables value=1 state=present reload=yes
 
 - name: ensure plugins, agents and openvswitch packages are installed
-  apt: name={{ item }} default_release=jessie-backports
+  apt: name={{ item }}
   with_items:
     - neutron-common
     - neutron-openvswitch-agent
