--- a/roles/openstackclient/tasks/main.yml
+++ b/roles/openstackclient/tasks/main.yml
@@ -1,29 +1,8 @@
-# - name: ensure python-openstackclient dependencies are installed from jessie-backports
-#   apt: name={{ item }} default_release=jessie-backports
-#   with_items:
-#     - python-pbr
-#     - python-six
-
-# - name: ensure python-openstackclient dependencies are installed from mirantis nochange
-#   apt: name={{ item }} default_release=jessie-mitaka-backports-nochange
-#   with_items:
-#     - python-requests
-#     - python-keyring
-#     - python-requests-kerberos
-#     - python-urllib3
-
-# - name: ensure python-openstackclient dependencies are installed from mirantis
-#   apt: name={{ item }} default_release=jessie-mitaka-backports
-#   with_items:
-#     - python-keystoneauth1
-#     - python-os-client-config
-#     - python-requestsexceptions
-  
 - name: ensure python-openstackclient is installed
-  apt: name=python-openstackclient default_release=jessie-mitaka-backports
+  apt: name=python-openstackclient
 
 - name: ensure the rest of openstack clients are installed
-  apt: name={{ item }} default_release=jessie-mitaka-backports
+  apt: name={{ item }} 
   with_items:
     - python-swiftclient
     - python-troveclient
