--- a/roles/glanceserver/templates/etc/glance/glance-registry.conf
+++ b/roles/glanceserver/templates/etc/glance/glance-registry.conf
@@ -838,8 +838,8 @@ auth_uri = http://{{ controller_ip }}:5000
 auth_url = http://{{ controller_ip }}:35357
 memcached_servers = {{ controller_ip }}:11211
 auth_plugin = password
-project_domain_id = default
-user_domain_id = default
+project_domain_name = default
+user_domain_name = default
 project_name = service
 username = glance
 password = {{ glance_identity_password }}
