Modifying neutron core_plugin and service_plugin names (short ones don't work)

--- a/roles/neutronserver/templates/etc/neutron/neutron.conf
+++ b/roles/neutronserver/templates/etc/neutron/neutron.conf
@@ -24,10 +24,10 @@
 auth_strategy = keystone
 
 # The core plugin Neutron will use (string value)
-core_plugin = ml2
+core_plugin = neutron.plugins.ml2.plugin.Ml2Plugin
 
 # The service plugins Neutron will use (list value)
-service_plugins = router,metering
+service_plugins = neutron.services.l3_router.l3_router_plugin.L3RouterPlugin
 
 # The base MAC address Neutron will use for VIFs. The first 3 octets will remain unchanged. If the 4th octet is not 00, it will also be
 # used. The others will be randomly generated. (string value)
