Defining properly vnc keymap (en-us) and enabling metadata api

--- a/roles/novaserver/templates/etc/nova/nova.conf
+++ b/roles/novaserver/templates/etc/nova/nova.conf
@@ -248,7 +248,7 @@ state_path = /var/lib/nova
 #periodic_fuzzy_delay = 60
 
 # A list of APIs to enable by default (list value)
-enabled_apis = osapi_compute
+enabled_apis = osapi_compute, metadata
 
 # A list of APIs with enabled SSL (list value)
 #enabled_ssl_apis =
@@ -4944,7 +4944,7 @@ enabled = True
 # * None
 #  (string value)
 # Deprecated group/name - [DEFAULT]/vnc_keymap
-keymap = es-es
+keymap = en-us
 
 #
 # The IP address on which an instance should listen to for incoming VNC
