adding manila server

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 hostfile = ansible_hosts
-remote_user = vagrant
-private_key_file = vagrant_private_key
+remote_user = root
+#private_key_file = vagrant_private_key
 host_key_checking = False
