--- a/roles/cindervolume/tasks/main.yml
+++ b/roles/cindervolume/tasks/main.yml
@@ -7,7 +7,7 @@
     - python-mysqldb
 
 - name: ensure physical and group volume are created
-  lvg: vg=cinder-volumes pvs={{ physical_device }} vg_options=--force
+  lvg: vg=cinder-volumes pvs={{ cinder_physical_device }} vg_options=--force
     
 - name: ensure cinder.conf is configured
   template: >
