--- a/site-aio.yml
+++ b/site-aio.yml
@@ -1,56 +1,56 @@
 ---
 
-- hosts: all
-  roles:
-    - role: common
+# - hosts: all
+#   roles:
+#     - role: common
 
-- hosts: controller-nodes
-  roles:
-    - role: dbserver
+# - hosts: controller-nodes
+#   roles:
+#     - role: dbserver
 
-- hosts: controller-nodes
-  roles:
-    - role: dbserver_population
+# - hosts: controller-nodes
+#   roles:
+#     - role: dbserver_population
 
-- hosts: controller-nodes
-  roles:
-    - role: rabbitserver
+# - hosts: controller-nodes
+#   roles:
+#     - role: rabbitserver
 
-- hosts: all
-  roles:
-    - role: openstackclient
+# - hosts: all
+#   roles:
+#     - role: openstackclient
 
-- hosts: controller-nodes
-  roles:
-    - role: keystoneserver
+# - hosts: controller-nodes
+#   roles:
+#     - role: keystoneserver
       
-- hosts: controller-nodes
-  roles:
-    - role: keystone_population
+# - hosts: controller-nodes
+#   roles:
+#     - role: keystone_population
       
-- hosts: storage-nodes
-  roles: 
-    - role: glanceserver
-
 # - hosts: storage-nodes
 #   roles: 
-#     - role: glance_population
+#     - role: glanceserver
 
-- hosts: controller-nodes
-  roles:
-    - role: novaserver
+# # - hosts: storage-nodes
+# #   roles: 
+# #     - role: glance_population
 
-- hosts: compute-nodes
-  roles:
-    - role: novacompute
+# - hosts: controller-nodes
+#   roles:
+#     - role: novaserver
 
-- hosts: controller-nodes
-  roles:
-   - role: neutronserver
+# - hosts: compute-nodes
+#   roles:
+#     - role: novacompute
 
-- hosts: network-nodes
-  roles:
-    - role: neutron-agents
+# - hosts: controller-nodes
+#   roles:
+#    - role: neutronserver
+
+# - hosts: network-nodes
+#   roles:
+#     - role: neutron-agents
 
 # - hosts: network-nodes
 #   roles:
@@ -70,4 +70,8 @@
 
 - hosts: controller-nodes
   roles:
-    - role: restart-services
+    - role: manilaserver
+      
+# - hosts: controller-nodes
+#   roles:
+#     - role: restart-services
