Adding manila-share (not working yet)

--- a/roles/manilaserver/templates/etc/manila/manila.conf
+++ b/roles/manilaserver/templates/etc/manila/manila.conf
@@ -125,12 +125,12 @@ auth_strategy = keystone
 
 # A list of share backend names to use. These backend names should be
 # backed by a unique [CONFIG] group with its options. (list value)
-#enabled_share_backends = <None>
+enabled_share_backends = lvm
 
 # Specify list of protocols to be allowed for share creation.
 # Available values are '('NFS', 'CIFS', 'GLUSTERFS', 'HDFS',
 # 'CEPHFS')' (list value)
-#enabled_share_protocols = NFS,CIFS
+enabled_share_protocols = NFS,CIFS
 
 # The full class name of the Compute API class to use. (string value)
 #compute_api_class = manila.compute.nova.API
@@ -2470,3 +2470,10 @@ rabbit_password = {{ rabbit_password }}
 # Missing or empty directories are ignored. (multi valued)
 # Deprecated group/name - [DEFAULT]/policy_dirs
 #policy_dirs = policy.d
+
+[LVM]
+share_backend_name = LVM
+share_driver = manila.share.drivers.lvm.LVMShareDriver
+driver_handles_share_servers = False
+lvm_share_volume_group = lvm-shares
+lvm_share_export_ip = {{ storage_ip }}
