--- a/roles/keystone_population/tasks/main.yml
+++ b/roles/keystone_population/tasks/main.yml
@@ -190,20 +190,46 @@
   command: openstack role add --project service --user manila admin
   
 # Heat
-- name: verify if heat user has been created
+- name: verify if heat domain has been created
   environment: k3
-  command: /usr/bin/openstack user show heat
+  command: /usr/bin/openstack domain show heat
+  register: result
+  ignore_errors: True
+        
+- name: ensure heat domain is created
+  environment: k3
+  command: /usr/bin/openstack domain create --description "Stack projects and users" heat 
+  when: result|failed
+  
+- name: verify if heat_domain_admin user has been created
+  environment: k3
+  command: /usr/bin/openstack user show heat_domain_admin
   register: result
   ignore_errors: True
 
-- name: ensure heat user is created
+- name: ensure heat_domain_admin user is created
   environment: k3
-  command: /usr/bin/openstack user create --domain default heat --password {{ heat_identity_password }}
+  command: /usr/bin/openstack user create --domain heat heat_domain_admin --password {{ heat_domain_admin_identity_password }}
   when: result|failed
 
-- name: ensure admin role is added to heat user
+- name: ensure admin role is added to heat_domain_admin user
   environment: k3
-  command: openstack role add --project service --user heat admin
+  command: /usr/bin/openstack role add --domain heat --user-domain heat --user heat_domain_admin admin
+
+- name: verify if heat_stack_owner role has been created
+  environment: k3
+  command: /usr/bin/openstack role show heat_stack_owner
+  register: result
+  ignore_errors: True
+
+- name: ensure heat_stack_owner role is created
+  environment: k3
+  command: /usr/bin/openstack role create heat_stack_owner
+  when: result|failed
+
+- name: ensure heat_stack_owner role is added to demo user
+  environment: k3
+  command: /usr/bin/openstack role add --project demo --user demo heat_stack_owner
   
 # Trove
 - name: verify if trove user has been created
